fixed the specificView layout issue. its likely the browser cached an older version which is why I was having the layout issue despite fixing the css

--- a/public/styles.css
+++ b/public/styles.css
@@ -54,3 +54,10 @@ form {
     background-color: grey;
     color: white;
 }
+
+.page-content {
+    display: block;
+    padding: 20px;
+    margin: 20px;
+    width: 100%;
+}
